--- a/daftar game.css
+++ b/daftar game.css
@@ -3,16 +3,19 @@
     padding: 0;}
 header {
     background-color: darkgray; 
-    color: whitesmoke; 
     height: 90px;}
 .logo {
-    float: left; 
+    float: left;
+    color: white;
     font-size: 40px; 
     padding: 20px 40px ;}
 .navbar li {
     float: left; 
     padding: 35px 20px;
     list-style: none; }
+.navbar a {
+    text-decoration: none;
+    color: white; }
 body {
     font-family:Arial, Helvetica, sans-serif; }
 main {
